// Vitest Snapshot v1

exports[`Dialog > should match snapshot 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Test-Dialog
            </h2>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <rect
                  height="24"
                  transform="translate(6 6)"
                  width="24"
                />
                <g
                  stroke="currentColor"
                  stroke-width="2"
                  transform="rotate(45 1.179 24.468)"
                >
                  <line
                    x1="8.5"
                    x2="8.5"
                    y2="16"
                  />
                  <line
                    x1="0.5"
                    x2="16.5"
                    y1="8"
                    y2="8"
                  />
                </g>
              </g>
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`Dialog should match snapshot 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Test-Dialog
            </h2>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
            >
              icon-close.svg
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
